Fix massa box wrong too large

--- a/server/int/api/resources/injectedStyle.css
+++ b/server/int/api/resources/injectedStyle.css
@@ -13,7 +13,6 @@
   z-index: 100000;
   position: relative;
 
-  min-width: 100vw;
   max-width: 100%;
 
   background: #ffffff;
